--- a/estatistica_2/qui_quadrado.ipynb
+++ b/estatistica_2/qui_quadrado.ipynb
@@ -1,5 +1,112 @@
 {
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Qui-Quadrado\n",
+    "Analisa se as diferenças significantes além das diferenças do acaso;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.stats import chi2_contingency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[19,  6],\n",
+       "       [43, 32]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "novela = np.array([[19, 6],[43, 32]])\n",
+    "novela"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vimos então que p é maior que 0.05, logo a hipotese nula não foi anulada!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[22,  3],\n",
+       "       [43, 32]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "novela2 = np.array([[22, 3], [43, 32]])\n",
+    "novela2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6.461538461538461,\n",
+       " 0.011023416388221425,\n",
+       " 1,\n",
+       " array([[16.25,  8.75],\n",
+       "        [48.75, 26.25]]))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chi2_contingency(novela2) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vimos aqui que o pvalue é menor que 0.05, logo a hipotese nula não é válida, então **temos** diferenças significativas "
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.8.3 64-bit ('base': conda)",
+   "language": "python",
+   "name": "python38364bitbasecondaa0f14daa8e6c4b25a9b490fc62b49355"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -10,43 +117,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python38364bitbasecondaa0f14daa8e6c4b25a9b490fc62b49355",
-   "display_name": "Python 3.8.3 64-bit ('base': conda)"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2,
- "cells": [
-  {
-   "source": [
-    "# Qui-Quadrado\n",
-    "Analisa se as diferenças significantes além das diferenças do acaso;"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from scipy.stats import chi2_contingency"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "novela = np.array([19, 6],[43, 32])"
-   ]
-  }
- ]
+ "nbformat_minor": 2
 }
