--- a/machine_learning/eclat.ipynb
+++ b/machine_learning/eclat.ipynb
@@ -1,21 +1,45 @@
 {
+ "metadata": {
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5-final"
+  },
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3",
+   "language": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2,
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Formação Cientista de Dados - Fernando Amaral e Jones Granatyr\n",
-    "# Algoritmo ECLAT"
-   ]
+    "# Mineração de regras usando eclat"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Utilizamos um código que faz o Eclat para nós."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Função pronta para o algoritmo ECLAT (atualmente o algoritmo não está disponível em uma biblioteca)\n",
@@ -30,10 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Global variable \n",
@@ -102,10 +124,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Pattern Store class:\n",
@@ -153,10 +173,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class DBReader:\n",
@@ -227,10 +245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def main(file, support):\n",
@@ -317,41 +333,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
-      "minsup = 3\n",
-      "Computation time = 0.0 Seconds\n",
-      "Pattern\t\t : Tid_List\n",
-      "Carvao \t\t : [1, 2, 3, 4]\n",
-      "Carvao Cerveja \t\t : [1, 3, 4]\n",
-      "Carvao Cerveja Maionese\n",
-      " \t\t : [3, 4]\n",
-      "Carvao Maionese\n",
-      " \t\t : [3, 4]\n",
-      "Carvao Pao\n",
-      " \t\t : [1, 2]\n",
-      "Cerveja \t\t : [1, 3, 4]\n",
-      "Cerveja Maionese\n",
-      " \t\t : [3, 4]\n",
-      "Maionese\n",
-      " \t\t : [3, 4]\n",
-      "Pao\n",
-      " \t\t : [1, 2]\n",
-      "Carvao \t\t : [1, 2, 3, 4]\n",
-      "Carvao Cerveja \t\t : [1, 3, 4]\n",
-      "Cerveja \t\t : [1, 3, 4]\n"
+      "usage: ipykernel_launcher.py [-h] [-f FILENAME] [-s SUPNUM] [-p]\nipykernel_launcher.py: error: unrecognized arguments: --ip=127.0.0.1 --stdin=9063 --control=9061 --hb=9060 --Session.signature_scheme=\"hmac-sha256\" --Session.key=b\"88559f0f-01ce-4e64-a621-584b2a5869f8\" --shell=9062 --transport=\"tcp\" --iopub=9064\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "SystemExit",
+     "evalue": "2",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 2\n"
      ]
     }
    ],
    "source": [
     "# Geração dos itens frequentes\n",
     "if\t__name__== \"__main__\":\n",
-    "\tmain('transacoes2.txt', 3);"
+    "\tmain('./dados/transacoes2.txt', 3);"
    ]
   },
   {
@@ -361,31 +366,5 @@
    "outputs": [],
    "source": []
   }
- ],
- "metadata": {
-  "jupytext": {
-   "cell_metadata_filter": "-all",
-   "main_language": "python",
-   "notebook_metadata_filter": "-all"
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+ ]
 }
